src/app/questionnaire/questionnaire.component.scss
@import '../../variables.scss';

.all-html-questionnaire {
    display: flex;
    flex-direction: row;
    height: 100vh;
    overflow: hidden;
}

.whole-check-list {
    display: flex;
    flex-basis: 10px;
    margin: 0;
}

.check-list {
    height: 100%;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

form {
    width: 100%;
}

.each-check {
    flex-grow: 1;
}

.complete {
    background-color: $turquoise;
}

.incomplete {
    background-color: $nav-color;
}

.whole-questionnaire {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

.left {
    display: flex;
    width: 100%;
}

div.container p {
    display: inline-block;
    font-size: $f-xs;
    margin-left: 2.5%;
}

.qst {
    width: 80%;
}

.container {
    display: flex;
    flex-direction: row;
    margin-bottom: 40px;
    width: 100%;
}

.text-slider {
    width: 80%;
    margin-right: 10px;
}

.displayed-score {
    display: flex;
    align-items: center;
    justify-content: center;
}

.circle-div {
    border-radius: 50%;
    background-color: $nav-color;
    width: 3.5em;
    height: 3.5em;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid;
}

.score-flex-box {
    display: flex;
}

.score-flex {
    flex-grow: 1;
}

.score-position {
    top: 45px;
    position: relative;
    width: 84.2%;
    display: none
}

.score-inputs {
    width: 80%;
    top: 20px;
    position: absolute;
    flex-grow: 1;
    margin-left: 2.5%;
    &:hover {
        cursor: pointer;
    }
}

.scoring {
    position: relative;
    height: 40px;
}

.score-flex > input {    
    height: 7px;
    outline: none;
    border-radius: 5px;
    -webkit-appearance: none;
    position: absolute;
    &:hover {
        cursor: pointer;
    }
}

.scoring-filler {
    overflow: hidden;
    background-color: $nav-color;
}

.scoring-blob {
    background-color: transparent;
}

.scoring-filler::-webkit-slider-thumb { //filler
    box-shadow: 1000px 0 0 1000px $nav-color;
    width: 0;
    height: 0;
}

.scoring-blob::-webkit-slider-thumb { //actual blob
    width: 20px;
    height: 20px;
    -webkit-appearance: none;
    border-radius: 50%;
    cursor: pointer;
    box-shadow: 0 0 60px 1px white;
    background: white;
}

.scoring-filler[type='range']::-webkit-slider-thumb {
    box-shadow: 1000px 0 0 1000px $nav-color;
}

div.sendButton {
    text-align: center;
    padding: 30px;
    margin-bottom: 100px;
}

.right {
    display: none;
    width: 20%;
    margin-left: 5%;
    margin-right: 5%;
}

.progress-arc {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
}

.progress-amount {
    top: 40%;
    left: 38%; //position % for centering score in IE 11. 
    z-index:1;
    position:absolute;
    margin-top: 0px;
    font-size: 24px;
    color: white;
    text-align: center;
}

.progress-component {
    transform:rotate(180deg);
}

.question-brief {
    display: block;
    position: absolute;
    width: 200px;
    top: 320px;    
}

@media only screen and (min-width: 894px) {
    .left {
        width: 70%;
    }
    .right {
        display: block;
    }
}

// Internet Explorer ------------------------------------------------------------------

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .whole-check-list {
    display: flex;
    flex-basis: 10px;
    margin: 0;
}

.check-list {
    height: 40vw;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

div.check-list a {
    flex-grow: 1;
}

.score-flex > input {    
    height: 7px;
}

input[type=range]::-ms-track {
    background: transparent;
    border-top: 0px $nav-color solid;
    border-bottom: 0px $nav-color solid;
    color: transparent;
}

.scoring-filler[type=range]::-ms-thumb { // filler
    box-shadow: 1000px 0 0 1000px $nav-color;
    width: 0;
    height: 40px;
}

.scoring-blob[type=range]::-ms-thumb { // actual blob
    width: 20px;
    height: 20px;
    -ms-appearance: none;
    border-radius: 50%;
    cursor: pointer;
    background: white;
    border: none;
}

input[type=range]::-ms-fill-lower {
    background: transparent;
}
input[type=range]:focus::-ms-fill-upper {
    background: $nav-color
}

// .whole-questionnaire {
//     display: inline-block;
//     flex-direction: row;
//     flex-grow: 1;
// }

.right {
    position: fixed;
    right: 0;
    top: 100px;
    width: 20%;
    margin-left: 5%;
    margin-right: 5%;
}

.question-brief {
    position: absolute;
    width: 200px;
    top: 220px;  
}
}

// Edge -------------------------------------------------------------

@supports (-ms-ime-align: auto) {

.scoring-filler::-webkit-slider-thumb { //filler
    box-shadow: 1000px 0 0 1000px $nav-color;
    width: 0;
    height: 0;
}

.scoring-blob::-webkit-slider-thumb { //actual blob
    overflow: auto;
    width: 20px;
    height: 20px;
    -webkit-appearance: none;
    border-radius: 50%;
    cursor: pointer;
    box-shadow: 0 0 0 0 white;
    background: white;
}
}

// FireFox ----------------------------------------------------------

@-moz-document url-prefix() {
    .whole-check-list {
    height: 100%;
    margin: 0;
}

div.check-list a {
    height: 10px;
}

.score-flex > input {    
    height: 7px;
    outline: none;
    border: 0;
    // border-radius: 5px;
    -moz-appearance: none;
    position: absolute;
    &:hover {
        cursor: pointer;
    }
}

.scoring-filler {
    overflow: hidden;
}

.scoring-blob {
    background-color: transparent;
}

input::-moz-range-track {
    background-color: transparent;
    border: 0;
}

.scoring-filler::-moz-range-thumb { //filler
    box-shadow: 1000px 0 0 1000px $nav-color;
    width: 0;
    height: 0;
}

.scoring-blob::-moz-range-thumb { //actual blob
    width: 20px;
    height: 20px;
    -moz-appearance: none;
    border: none;
    border-radius: 50%;
    cursor: pointer;
    box-shadow: 0 0 60px 5px white;
    background: white;
    z-index: 10;
}

.right {
    position: fixed;
    right: 0;
    top: 120px;
    width: 20%;
    margin-left: 5%;
    margin-right: 5%;
}

.progress-arc {
    margin-top: -35px;
}

.question-brief {
    display: block;
    position: relative;
    width: 200px;
    top: 0;
    margin-top: -100px;
}
}

